@@ -1,11 +1,8 @@
 package com.example.concertManagement_Server.controller;
 
-import com.example.concertManagement_Server.dto.VenueDto;
-import com.example.concertManagement_Server.dto.VenueRequest;
+import com.example.concertManagement_Server.dto.*;
 import com.example.concertManagement_Server.exception.ResourceNotFoundException;
-import com.example.concertManagement_Server.mapper.VenueMapper;
-import com.example.concertManagement_Server.model.Artist;
-import com.example.concertManagement_Server.model.Event;
+import com.example.concertManagement_Server.mapper.*;
 import com.example.concertManagement_Server.service.ArtistService;
 import com.example.concertManagement_Server.service.VenueService;
 import org.springframework.http.ResponseEntity;
@@ -18,50 +15,48 @@ import java.util.stream.Collectors;
 @RequestMapping("/venues")
 public class VenueController {
 
-    private final VenueService venueService;
+    private final VenueService  venueService;
     private final ArtistService artistService;
-    private final VenueMapper venueMapper;
+    private final VenueMapper   venueMapper;
+    private final ArtistMapper  artistMapper;   // ← NEW
+    private final EventMapper   eventMapper;    // ← NEW (optional)
 
-    public VenueController(VenueService venueService,
-                           ArtistService artistService,
-                           VenueMapper venueMapper) {
-        this.venueService = venueService;
+    public VenueController(
+            VenueService  venueService,
+            ArtistService artistService,
+            VenueMapper   venueMapper,
+            ArtistMapper  artistMapper,         // ← NEW
+            EventMapper   eventMapper           // ← NEW
+    ) {
+        this.venueService  = venueService;
         this.artistService = artistService;
-        this.venueMapper = venueMapper;
+        this.venueMapper   = venueMapper;
+        this.artistMapper  = artistMapper;      // ← NEW
+        this.eventMapper   = eventMapper;       // ← NEW
     }
 
-    /**
-     * Retrieves all venues.
-     */
+    /* ---------- basic CRUD ---------- */
+
     @GetMapping
     public ResponseEntity<List<VenueDto>> listAllVenues() {
-        var dtos = venueService.listAllVenues().stream()
+        List<VenueDto> dtos = venueService.listAllVenues().stream()
                 .map(venueMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(dtos);
     }
 
-    /**
-     * Retrieves a single venue by ID.
-     */
     @GetMapping("/{id}")
     public ResponseEntity<VenueDto> getVenue(@PathVariable Long id) {
         VenueDto dto = venueMapper.toDto(venueService.getVenueById(id));
         return ResponseEntity.ok(dto);
     }
 
-    /**
-     * Creates a new venue.
-     */
     @PostMapping
     public ResponseEntity<VenueDto> createVenue(@RequestBody VenueRequest req) {
         var saved = venueService.createVenue(req);
         return ResponseEntity.status(201).body(venueMapper.toDto(saved));
     }
 
-    /**
-     * Updates an existing venue.
-     */
     @PutMapping("/{id}")
     public ResponseEntity<VenueDto> updateVenue(
             @PathVariable Long id,
@@ -70,34 +65,35 @@ public class VenueController {
         return ResponseEntity.ok(venueMapper.toDto(updated));
     }
 
-    /**
-     * Lists all artists scheduled for a venue.
-     */
+    /* ---------- extra look-ups ---------- */
+
+    /** Artists booked at this venue (as DTOs, avoids cyclic JSON). */
     @GetMapping("/{id}/artists")
-    public ResponseEntity<List<Artist>> getArtistsForVenue(@PathVariable Long id) {
-        return ResponseEntity.ok(
-                artistService.listAllArtistsForVenue(id)
-        );
+    public ResponseEntity<List<ArtistDto>> getArtistsForVenue(@PathVariable Long id) {
+        List<ArtistDto> dtos = artistService.listAllArtistsForVenue(id).stream()
+                .map(artistMapper::toDto)
+                .toList();
+        return ResponseEntity.ok(dtos);
     }
 
-    /**
-     * Retrieves upcoming events for a venue.
-     */
+    /** Upcoming events at this venue (mapped to DTOs for consistency). */
     @GetMapping("/{id}/upcoming-events")
-    public ResponseEntity<List<Event>> getUpcomingEventsForVenue(
-            @PathVariable Long id) {
-        return ResponseEntity.ok(
-                venueService.findUpcomingEventsForVenue(id)
-        );
+    public ResponseEntity<List<EventDto>> getUpcomingEventsForVenue(@PathVariable Long id) {
+        List<EventDto> dtos = venueService.findUpcomingEventsForVenue(id).stream()
+                .map(eventMapper::toDto)
+                .toList();
+        return ResponseEntity.ok(dtos);
     }
+
+    /* ---------- delete ---------- */
 
     @DeleteMapping("/{id}")
     public ResponseEntity<Void> deleteVenue(@PathVariable Long id) {
         try {
             venueService.deleteVenue(id);
-            return ResponseEntity.noContent().build();   // 204
+            return ResponseEntity.noContent().build();
         } catch (ResourceNotFoundException ex) {
-            return ResponseEntity.notFound().build();    // 404
+            return ResponseEntity.notFound().build();
         }
     }
 }
